--- a/job-portal-client/package.json
+++ b/job-portal-client/package.json
@@ -11,6 +11,8 @@
     "build-css": "tailwindcss build src/index.css -o public/styles.css -i src/index.css"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@heroicons/react": "^2.0.18",
     "axios": "^1.6.5",
     "buffer": "^6.0.3",
@@ -21,6 +23,7 @@
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
+    "react-checkmark": "^2.0.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
     "react-icons": "^4.12.0",
