--- a/job-portal-client/package.json
+++ b/job-portal-client/package.json
@@ -21,6 +21,7 @@
     "jsonwebtoken-promisified": "^1.0.3",
     "jwt-decode": "^4.0.0",
     "localforage": "^1.10.0",
+    "lucide-react": "^0.471.1",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-checkmark": "^2.0.0",
